images appear in the correct direction, better alignment but still off center and full width(maybe because of my monitor size), belnd names appear correct direction/orientation and border-left appears at correct width and color

--- a/src/components/OurBlends/OurBlends.css
+++ b/src/components/OurBlends/OurBlends.css
@@ -1,10 +1,21 @@
-html {
+/* html {
   height: 100vh;
+} */
+*{
+    padding: 0;
+    margin:0;
+    box-sizing: border-box;
 }
+
+
+
 body {
-  padding: 0;
-  margin: 0;
-  font-family: "flama book"
+  font-family: "flama book";
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  height:100vh;
   /* background: linear-gradient(#fff, #fefefe, #eaeaea); */
 }
 
@@ -49,17 +60,17 @@ body {
   right: 100px;
 }
 
-/* THE IMAGES WITHIN THE ACCORDION */
+/* THE CONTAINER FOR THE ACCORDION */
 .accordionContainer {
+    display: flex;
+    width: 1440px;
+    height: 708px;
+    /* flex-direction: row; */
   /* max-width: 990px; */
   /* background: rgba(0, 0, 0, 0.1); */
   /* width: 385px; */
-  width: 1440px;
-  height: 708px;
   /* margin: 20px auto; */
-  display: flex;
   /* box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.47); */
-  flex-direction: row;
   /* cursor: pointer; */
   /* margin-bottom: 100px; */
   /* padding-left: 15px; */
@@ -68,22 +79,23 @@ body {
 
 .panel {
   position: relative;
-  /* height: 100%; */
   height: 716px;
-
   flex: 1;
-  background-position: left;
+  /* BACKGROUND */
+  background-position: center;
   background-size: cover;
+  background-repeat: no-repeat;
   transition: 0.7s;
-  /* box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.47); */
   border-left:2px solid;
   border-left-color: #A2A8AA;
   writing-mode:vertical-lr;
   text-orientation:mixed;
   text-combine-upright: none;
-  transform: rotate(0.5turn);
+  /* transform: rotate(0.5turn); */
   padding-bottom: 5px;
+  /* box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.47); */
   /* bottom:20px; */
+  /* height: 100%; */
 
 }
 
@@ -120,6 +132,8 @@ body {
   font-weight: 650;
   line-height: normal;
   letter-spacing: 3.6px;
+  transform: rotate(0.5turn);
+
   /* writing-mode:vertical-rl; */
   /* writing-mode:vertical-lr;
   text-orientation:mixed;
